# ak

./: .$erd.drawio.bkp  .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  erd.drawio  erd.mdj  pyproject.toml
ak/: asgi.py  settings.py  urls.py  wsgi.py
community/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py  webhook_admin.py  webhooks.py
community/management/commands/: setup_webhooks.py
community/migrations/: 0001_initial.py  0002_parent_spouse.py  0003_rename_member_parent_user_rename_member_spouse_user.py  0004_alter_spouse_spouse_minute_delete_minutes.py  0005_remove_spouse_spouse_remove_spouse_user_and_more.py  0006_member_webhookendpoint_alter_announcement_options_and_more.py  0007_alter_branch_options.py
